backface-visibility - bug, кнопка "Начать заново"

--- a/css/elements_rsp.less
+++ b/css/elements_rsp.less
@@ -28,6 +28,7 @@ footer {
 }
 .element {
 	position: absolute;
+	-webkit-backface-visibility: hidden;
 	//outline: 1px dashed rgba(255,255,255,.2);
 	a {text-decoration: none}
 	&:hover {
@@ -456,9 +457,6 @@ footer {
 		}
 	}
 } 
-* {
-	-webkit-backface-visibility: hidden;
-}
 section > div {
 
 					background-repeat: no-repeat;
