--- a/css/project.less
+++ b/css/project.less
@@ -60,9 +60,6 @@ button.ex {
 	}
 }
 body {
-	-webkit-backface-visibility: hidden;
--moz-backface-visibility:    hidden;
--ms-backface-visibility:     hidden;
 }
 
 body> header {
